--- a/11-122/11-122.csproj
+++ b/11-122/11-122.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Login.cs" />
+    <Compile Include="Controller\SignUp.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
